2006-12-14  Andy Wingo  <wingo@pobox.com>

	* flumotion/test/test_http.py
	(TestHTTPStreamingResource.testRenderHTTPAuthUnauthorized)
	(TestHTTPStreamingResource.testRenderHTTPTokenUnauthorized)
	(TestHTTPStreamingResource.testRenderHTTPTokenAuthorized)
	(TestHTTPStreamingResource.deferAssertUnauthorized)
	(TestHTTPStreamingResource.deferAssertAuthorized): Fix bogus
	clusterfuck of deferred generators, weHaveAnOldTwisted,
	unittest.deferredResult, and unit tests returning deferreds.

2006-12-14  Sebastien Merle  <sebastien@fluendo.com>

	* flumotion/component/consumers/disker/admin_gtk.py: 
	Removed duplicated call to node's setUIState method.
	Fixes #524

2006-12-14  Michael Smith  <msmith@fluendo.com>

	* flumotion/component/base/http.py:
	  Delete unreachable code.

2006-12-14  Michael Smith  <msmith@fluendo.com>

	* flumotion/admin/gtk/client.py:
	  Make this file compliant with PEP-263.
	  Fixes distcheck.

2006-12-14  Michael Smith  <msmith@fluendo.com>

	* flumotion/component/converters/overlay/overlay.py:
	  Chain to parent do_stop() method, so we shut down the pipeline and
	  avoid nasty racy GIL-related failures on shutdown of overlays.
	  Fixes #438.

2006-12-14  Sebastien Merle  <sebastien@fluendo.com>

	* flumotion/component/producers/audiotest/audiotest.glade.py:
	Set the spine button value to the same value as the scale.
	Fixes #525
	
	* flumotion/common/boot.py.in: 
	Changed from PYGTK_BASE_REQ to PYGTK_010_REQ to reflect configure.ac

2006-12-13  Andy Wingo  <wingo@pobox.com>

	* flumotion/admin/connections.py (get_recent_connections): Handle
	bad connection files gracefully. Fixes #471.

	* flumotion/test/test_dialogs.py (TestErrorDialog.testDialogRun):
	Deal with the errordialog returning a deferred. Unfortunately we
	still need the gtk main loop, for some reason.

	* flumotion/admin/gtk/client.py
	(Window.on_open_connection.refused): Catch all connection errors,
	not just ConnectionFailed. Fixes #298.
